<resources>
    <!-- Texto -->
    <string name="app_name">QueerMap</string>
    <!-- activity_cover -->
    <string name="welcome">Bienvenid@ a QueerMap, conectando a la comunidad LGBTIQ+ en un solo lugar.</string>
    <string name="login_title">Iniciar sesión</string>
    <string name="signincover">Regístrate</string>
    <!-- activity_login -->
    <!-- login_title -->
    <string name="insert_mail">Ingresa tu correo electrónico</string>
    <string name="email_hint">queermap@gmail.com</string>
    <string name="password">Contraseña</string>
    <string name="password_hint">********</string>
    <string name="remember_me"> Recuérdame</string>
    <string name="forgot_password">Olvidaste la contraseña?</string>
    <string name="login_button">Ingresar</string>
    <string name="or_connect_with">O conéctate usando:</string>
    <string name="no_account">No tienes cuenta?</string>
    <string name="sign_up">Regístrate</string>
    <string name="reset_password">Recuperar contraseña</string>
    <string name="cancel">Cancelar</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>

    <string name="facebook_app_id">2160548617707809</string>
    <string name="fb_login_protocol_scheme">fb2160548617707809</string>
    <string name="facebook_client_token">4d1a1752177c9f32be849072de20002f</string>


    <string name="default_web_client_id">266619159161-hps71dmm39aphf1l0vbrsl4n62qcatkq.apps.googleusercontent.com</string>
    <string name="terminos_condiciones_text">Términos y Condiciones de QueerMap\n\nPor favor, lee detenidamente los siguientes términos y condiciones antes de utilizar la aplicación QueerMap. Al utilizar la aplicación, aceptas cumplir con estos términos y condiciones. Si no estás de acuerdo con alguno de ellos, te recomendamos que no utilices la aplicación.\n\nUso de la Aplicación\n1.1. QueerMap es una aplicación móvil diseñada para ayudar a la comunidad LGBTIQ+ a encontrar lugares seguros y amigables en su área local y en todo el país.\n1.2. Al utilizar QueerMap, aceptas que la información proporcionada en la aplicación es solo para fines informativos. No nos responsabilizamos por la precisión, actualidad o disponibilidad de la información de los lugares mostrados en la aplicación.\n1.3. Eres responsable de verificar la disponibilidad, horarios de funcionamiento y cualquier otro detalle relevante de los lugares antes de visitarlos. Te recomendamos que siempre consultes directamente con los lugares o servicios mencionados para obtener la información más actualizada.\n1.4. La aplicación puede incluir enlaces a sitios web de terceros. No tenemos control sobre el contenido o la disponibilidad de estos sitios y no nos responsabilizamos por ellos. Tu acceso y uso de sitios web de terceros están sujetos a los términos y condiciones de dichos sitios.\n\nPrivacidad y Seguridad\n2.1. Respetamos tu privacidad y nos comprometemos a proteger tus datos personales. Para obtener información detallada sobre cómo recopilamos, utilizamos y protegemos tus datos personales, consulta nuestra Política de Privacidad.\n2.2. No compartiremos tu información personal con terceros sin tu consentimiento, excepto cuando sea necesario para cumplir con la ley o proteger nuestros derechos legales.\n2.3. Es responsabilidad del usuario mantener su cuenta y contraseña de QueerMap de manera segura y confidencial. No nos responsabilizamos por el acceso no autorizado a tu cuenta.\n\nComunidad y Respeto\n3.1. QueerMap se esfuerza por crear un espacio inclusivo y respetuoso para la comunidad LGBTIQ+. Al utilizar la aplicación, aceptas comportarte de manera respetuosa hacia otros usuarios y lugares.\n3.2. No se tolerará ningún tipo de discriminación, acoso, lenguaje ofensivo o comportamiento inapropiado dentro de la aplicación. Nos reservamos el derecho de tomar las medidas necesarias, incluida la suspensión o eliminación de la cuenta, para garantizar un entorno seguro y respetuoso para todos los usuarios.\n\nEdad y Acceso a Eventos y Servicios\n4.1 Es importante que proporciones datos reales de tu edad al utilizar QueerMap. Esto se debe a que algunos eventos y servicios pueden tener restricciones de edad, y es necesario cumplir con los requisitos correspondientes.\n4.2. Al utilizar QueerMap, aceptas que los usuarios menores de 18 años solo podrán acceder a eventos y servicios permitidos para su rango de edad, relacionados con salud, educación y orientación.\n4.3. Te recordamos que los usuarios menores de 18 años deben contar con el consentimiento y supervisión de sus padres, apoderados o tutores legales al utilizar QueerMap y participar en eventos o acceder a servicios.\n4.4. Nos esforzamos por proporcionar información precisa y actualizada sobre la edad requerida para cada evento o servicio en QueerMap. Sin embargo, no nos responsabilizamos por posibles cambios o actualizaciones realizadas por los organizadores de dichos eventos o servicios.\n4.5. Te recomendamos que verifiques los requisitos de edad y cualquier otra restricción antes de asistir a un evento o acceder a un servicio. Si tienes alguna duda o inquietud, te sugerimos contactar directamente con los organizadores o proveedores de dichos eventos o servicios.\n\nPropiedad Intelectual\n5.1. Todos los derechos de propiedad intelectual de QueerMap y su contenido, incluidos textos, gráficos, logotipos, imágenes y software, son propiedad de los respectivos propietarios y están protegidos por las leyes de derechos de autor y otras leyes de propiedad intelectual.\n5.2. Se prohíbe la reproducción, distribución, modificación o uso no autorizado del contenido de QueerMap sin el consentimiento expreso por escrito del propietario.\n\nModificaciones y Terminación\n6.1. Nos reservamos el derecho de modificar, suspender o interrumpir la aplicación QueerMap, total o parcialmente, en cualquier momento y sin previo aviso.\n6.2. Nos reservamos el derecho de modificar estos términos y condiciones en cualquier momento. Los cambios entrarán en vigencia tan pronto como se publiquen en la aplicación. Te recomendamos que revises regularmente estos términos y condiciones para estar al tanto de cualquier actualización.\n6.3. Nos reservamos el derecho de terminar o suspender tu acceso a QueerMap en caso de incumplimiento de estos términos y condiciones o por cualquier motivo justificado a nuestro criterio.\n\nSi tienes alguna pregunta o inquietud sobre estos términos y condiciones, no dudes en contactarnos. Agradecemos tu comprensión y cooperación para crear un entorno seguro y acogedor en QueerMap.</string>
    <string name="terms_text">Tu espacio seguro en una app:\n\n ‣ Sé auténtic@: Utiliza tu identidad real en la aplicación. No uses identidades falsas.\n\n ‣ Celebramos la diversidad y el respeto hacia todos los miembros de la comunidad LGBTIQ+.\n\n ‣ Reporta cualquier actividad inapropiada para mantener nuestro entorno seguro y acogedor.\n\n ‣ Privacidad y confianza: No compartas ni solicites información personal sensible sin el consentimiento explícito de la otra persona.\n\nJuntes, creamos una comunidad inclusiva y segura.\n\nEquipo Queermap</string>
    <string name="google_maps_key">AIzaSyAxYFKAt5D18MCNEBf2RUXfrMmYGha_lkM</string>
    <string name="pexels_key">lncMUMsOuA3gsNfWRSxMG9nDBUQ8GD4987XLf0MD4XjATMdS8w1K6lps</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo">logo app</string>
    <string name="google_login">Iniciar sesión con Google</string>
    <string name="facebook_login">Iniciar sesión con Facebook</string>
    <string name="toggle_password_visibility">Mostrar u ocultar contraseña</string>
    <string name="hint_email">queermap@gmail.com</string>
    <string name="hint_mail">queermap@gmail.com</string>
    <string name="back_button_description">volver atrás</string>

    <!-- SignUpFragment -->
    <string name="register_title">Registro</string>
    <string name="username">Nombre de usuario</string>
    <string name="username_hint">Como quieres que te llamemos?</string>
    <string name="full_name">Nombre Completo</string>
    <string name="full_name_hint">Ingresa tu nombre completo</string>
    <string name="show_password">Mostrar contraseña</string>
    <string name="repeat_password">Repite tu contraseña</string>
    <string name="date_of_birth">Fecha de nacimiento</string>
    <string name="question_mark">Ícono de pregunta</string>
    <string name="calendar">Calendario</string>
    <string name="signup">Regístrate</string>
    <string name="signup_google">Iniciar sesión con Google</string>
    <string name="signup_fb">Iniciar sesión con Facebook</string>
    <string name="signup_with">O regístrate usando:</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>


</resources>