<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/forgotPasswordLayout"
    android:background="@color/background_color">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/neumorphism_dialog_background"
        android:padding="16dp">

        <TextView
            android:id="@+id/forgotPasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/forgot_password"
            android:textSize="20sp"
            android:textColor="@color/title_color"
            android:fontFamily="@font/raleway_medium" />

        <TextView
            android:id="@+id/forgotPasswordDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgotPasswordTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/insert_mail"
            android:textSize="16sp"
            android:textColor="@color/title_color"
            android:fontFamily="@font/raleway_medium" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgotPasswordDescription"
            android:layout_marginTop="16dp"
            android:background="@drawable/neumorphism_edit_text"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/raleway_italic"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color"
            android:textSize="16sp" />

        <Button
            android:id="@+id/resetPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailEditText"
            android:layout_marginTop="16dp"
            android:text="@string/reset_password"
            android:textColor="@color/button_text"
            android:background="@drawable/neumorphism_button"
            android:textSize="16sp"
            android:fontFamily="@font/raleway_medium_italic" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/resetPasswordButton"
            android:layout_marginTop="8dp"
            android:text="@string/cancel"
            android:textColor="@color/button_text"
            android:background="@drawable/neumorphism_button"
            android:textSize="16sp"
            android:fontFamily="@font/raleway_medium_italic" />

    </RelativeLayout>

</RelativeLayout>
