<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFE1EA">

    <!-- Flecha para volver atrás -->
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/ic_arrow_back" />

    <!-- Título: Iniciar sesión -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-14dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login_title"
        android:textColor="#630573"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/logmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTextView"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login_title"
        android:textColor="#630573"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logmail"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/neumorphism_edit_text"
        android:fontFamily="sans-serif"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="#94630573"
        android:textColorHint="#94630573"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailEditText"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="Contraseña"
        android:textColor="#630573"
        android:textSize="16sp" />

    <!-- Casillero de Contraseña -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/neumorphism_edit_text"
        android:fontFamily="sans-serif"
        android:hint="***********"
        android:inputType="textPassword"
        android:textColor="#630573"
        android:textColorHint="#94630573"
        android:textSize="16sp" />

    <!-- Cuadro para marcar "Recuérdame" -->
    <CheckBox
        android:id="@+id/rememberCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditText"
        android:layout_alignParentstart="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_toStartOf="@+id/forgotPasswordTextView"
        android:button="@drawable/neumorphism_checkbox"
        android:fontFamily="sans-serif"
        android:text="@string/remember_me"
        android:textColor="#630573" />

    <!-- Texto para "Olvidaste la contraseña?" -->
    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif"
        android:text="@string/forgot_password"
        android:textColor="#630573" />

    <!-- Botón Ingresar -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditText"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/neumorphism_button"
        android:backgroundTint="#630573"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login_button"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <!-- Botones de conexión con redes sociales -->
    <LinearLayout
        android:id="@+id/socialButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageView
            android:id="@+id/googleButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/google"
            android:src="@drawable/google_icon" />

        <ImageView
            android:id="@+id/facebookButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/facebook"
            android:src="@drawable/facebook_icon" />

        <ImageView
            android:id="@+id/instagramButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/instagram"
            android:src="@drawable/instagram_icon" />


    </LinearLayout>

    <!-- Botón para Registrarse -->
    <TextView
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/socialButtonsLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/signup"
        android:textColor="#630573"
        android:textSize="16sp" />

</RelativeLayout>
