<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Fondo -->
    <ImageView
        android:id="@+id/cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/cover_background"
        android:contentDescription="@string/app_name"
        android:foreground="@drawable/dark_overlay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Título -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/button_text"
        android:textSize="@dimen/text_sp37"
        android:textStyle="bold"
        android:padding="30dp"
        android:lineSpacingMultiplier="1.5"
        android:fontFamily="@font/raleway_medium_italic"
        android:layout_marginTop="@dimen/margin_top_dp50"
        android:layout_marginStart="@dimen/margin_start_dp25"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Botón Login -->
    <Button
        android:id="@+id/cover_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="@dimen/margin_start_dp32"
        android:layout_marginEnd="@dimen/margin_end_dp32"
        android:text="@string/login_title"
        android:textColor="@color/button_text"
        android:fontFamily="@font/raleway_semi_bold_italic"
        android:textSize="@dimen/text_sp22"
        android:background="@drawable/neumorphism_button"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botón Signin -->
    <Button
        android:id="@+id/cover_signin_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_dp55"
        android:layout_marginStart="@dimen/margin_start_dp32"
        android:layout_marginEnd="@dimen/margin_end_dp32"
        android:text="@string/signincover"
        android:textColor="@color/button_text"
        android:fontFamily="@font/raleway_semi_bold_italic"
        android:textSize="@dimen/text_sp22"
        android:background="@drawable/neumorphism_button"
        app:layout_constraintTop_toBottomOf="@id/cover_login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
