<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Cover image with back arrow -->
        <RelativeLayout
            android:id="@+id/loginCover"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_top_dp250">

            <ImageView
                android:id="@+id/loginImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/login_cover"
                android:alpha="0.9"
                android:visibility="visible"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="@dimen/layout_dp35"
                android:layout_height="@dimen/layout_dp35"
                android:layout_marginStart="@dimen/margin_start_dp16"
                android:layout_marginTop="@dimen/margin_top_dp16"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/raleway_medium_italic"
                android:text="@string/login_title"
                android:textColor="@color/title_color"
                android:letterSpacing="0.05"
                android:textSize="@dimen/text_sp37"
                android:textStyle="bold"
                android:shadowColor="@color/background_color"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="2" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:indeterminate="true"
                android:visibility="gone"
                style="@style/GradientProgressBar" />

            <TextView
                android:id="@+id/log_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_dp32"
                android:layout_marginTop="@dimen/margin_top_dp40"
                android:layout_marginEnd="@dimen/margin_end_dp32"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/insert_mail"
                android:textColor="@color/title_color"
                android:textSize="@dimen/text_sp16" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/log_mail"
                android:layout_marginStart="@dimen/margin_start_dp32"
                android:layout_marginTop="@dimen/margin_top_dp5"
                android:layout_marginEnd="@dimen/margin_end_dp32"
                android:background="@drawable/neumorphism_edit_text"
                android:fontFamily="@font/raleway_light_italic"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:minHeight="@dimen/layout_dp48"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:textSize="@dimen/text_sp16" />

            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailEditText"
                android:layout_marginStart="@dimen/margin_start_dp32"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/margin_end_dp32"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/password"
                android:textColor="@color/title_color"
                android:textSize="@dimen/text_sp16" />

            <LinearLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/password"
                android:layout_marginStart="@dimen/margin_start_dp32"
                android:layout_marginTop="@dimen/margin_top_dp10"
                android:layout_marginEnd="@dimen/margin_end_dp32"
                android:background="@drawable/neumorphism_edit_text"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="-5dp"
                    android:layout_weight="9"
                    android:backgroundTint="#02FFFFFF"
                    android:fontFamily="@font/raleway_italic"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color"
                    android:textSize="@dimen/text_sp16"
                    tools:ignore="TouchTargetSizeCheck" />

                <ImageView
                    android:id="@+id/eyeIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/margin_top_dp10"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:src="@drawable/open_eye" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/remember_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_layout"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/rememberCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginStart="@dimen/margin_start_dp32"
                    android:layout_marginTop="@dimen/margin_top_dp10"
                    android:textAlignment="center"
                    android:text="@string/remember_me"
                    android:textSize="@dimen/text_sp15"
                    android:textColor="@color/title_color"
                    android:fontFamily="@font/raleway_medium"
                    android:button="@drawable/neumorphism_checkbox" />

                <TextView
                    android:id="@+id/forgotPasswordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="@dimen/margin_top_dp10"
                    android:textSize="@dimen/text_sp15"
                    android:fontFamily="@font/raleway_medium"
                    android:text="@string/forgot_password"
                    android:textColor="@color/title_color" />
            </LinearLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/remember_box"
                android:layout_marginStart="@dimen/margin_start_dp32"
                android:layout_marginTop="@dimen/margin_top_dp30"
                android:layout_marginEnd="@dimen/margin_end_dp32"
                android:background="@drawable/neumorphism_button"
                android:fontFamily="@font/raleway_medium_italic"
                android:text="@string/login_button"
                android:textColor="@color/button_text"
                android:textSize="@dimen/text_sp20" />

            <TextView
                android:id="@+id/or_connect_with"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_button"
                android:layout_marginTop="10dp"
                android:text="@string/or_connect_with"
                android:textAlignment="center"
                android:textSize="@dimen/text_sp15"
                android:textColor="@color/title_color"
                android:fontFamily="@font/raleway_medium_italic" />

            <LinearLayout
                android:id="@+id/socialButtonsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_dp10"
                android:layout_below="@id/or_connect_with"
                android:orientation="horizontal"
                android:gravity="center">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/googleSignInButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/google_icon"
                    android:contentDescription="@string/google_login"
                    android:scaleType="fitCenter"
                    tools:ignore="TouchTargetSizeCheck" />

                <Space
                    android:layout_width="35dp"
                    android:layout_height="match_parent" />

                <ImageButton
                    android:id="@+id/facebookLoginButton"
                    android:layout_width="34dp"
                    android:layout_height="29dp"
                    android:background="@drawable/facebook_icon"
                    android:contentDescription="@string/facebook_login"
                    android:scaleType="fitCenter"
                    tools:ignore="TouchTargetSizeCheck" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_signin_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@id/socialButtonsLayout"
                android:layout_marginStart="@dimen/margin_start_dp105"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/login_no_account"
                    android:layout_width="@dimen/layout_dp130"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account"
                    android:textSize="@dimen/text_sp15"
                    android:textColor="@color/title_color"
                    android:fontFamily="@font/raleway_medium" />

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textSize="@dimen/text_sp15"
                    android:textColor="@color/title_color"
                    android:fontFamily="@font/raleway_bold_italic" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
